task1/11-deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: backend
  namespace: app
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:

      - name: multitool
        image: wbitt/network-multitool:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
