task1/20-service-frontend.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: app
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - name: web
      port: 9001
      targetPort: 80
    - name: multitool
      port: 9002
      targetPort: 8080
