task1/21-service-backend.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: app
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - name: multitool
      port: 8080
      targetPort: 8080
