task1/22-service-cache.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cache-service
  namespace: app
spec:
  type: ClusterIP
  selector:
    app: cache
  ports:
    - name: multitool
      port: 8080
      targetPort: 8080
