task1/41-allow-frontend-backend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: 
  name: allow-frontend-to-backend
  namespace: app
spec:
  podSelector:
    matchLabels:
      app: backend
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: frontend
# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: allow-frontend-to-backend
#   namespace: app
# spec:
#   podSelector:                # ← apply to BACKEND pods
#     matchLabels:
#       app: backend
#   ingress:
#   - from:
#     - podSelector:
#         matchLabels:
#           app: frontend       # ← allowed access from FRONTEND pods
#     ports:
#     - port: 8080
