task1/42-allow-backend-cache.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: 
  name: allow-backend-cache
  namespace: app
spec:
  podSelector:
    matchLabels:
      app: cache
  # policyTypes:
  # - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: backend
